care/force-app/main/default/objects/Default_Email_Publisher_Setting__mdt/Default_Email_Publisher_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Default Email Publisher Setting</label>
    <pluralLabel>Default Email Publisher Settings</pluralLabel>
</CustomObject>