care/force-app/main/default/objects/Default_Email_Publisher_Setting__mdt/fields/Case_Origins__c.field-meta.xml
<CustomField>
    <fullName>Case_Origins__c</fullName>
    <defaultValue>&apos;Any&apos;</defaultValue>
    <inlineHelpText>Enter a comma delimited list of Case Origins here.

Use &apos;Any&apos; to match all Case Origins.

The Case Origins can&apos;t be validated during editing, so edit this field carefully. The code will gracefully ignore invalid Case Origins at runtime.</inlineHelpText>
    <label>Case Origins</label>
    <length>255</length>
    <type>Text</type>
</CustomField>