care/force-app/main/default/objects/Default_Email_Publisher_Setting__mdt/fields/Countries__c.field-meta.xml
<CustomField>
    <fullName>Countries__c</fullName>
    <defaultValue>&apos;Any&apos;</defaultValue>
    <inlineHelpText>Enter a comma delimited list of countries here.  

Use &apos;Any&apos; to match all countries.  

Use &apos;Any&apos; for US.

The countries can&apos;t be validated during editing, so edit this field carefully.  The code will gracefully ignore invalid countries at runtime.</inlineHelpText>
    <label>Countries</label>
    <length>40</length>
    <type>Text</type>
</CustomField>