care/force-app/main/default/objects/Default_Email_Publisher_Setting__mdt/fields/Default_BCC__c.field-meta.xml
<CustomField>
    <fullName>Default_BCC__c</fullName>
    <inlineHelpText>If a BCC already exists, this value will be appended to the existing list of BCC recipients.</inlineHelpText>
    <label>Default BCC</label>
    <type>Email</type>
</CustomField>