care/force-app/main/default/objects/Default_Email_Publisher_Setting__mdt/fields/Default_CC__c.field-meta.xml
<CustomField>
    <fullName>Default_CC__c</fullName>
    <inlineHelpText>If a CC already exists, this value will be appended to the existing list of CC recipients.</inlineHelpText>
    <label>Default CC</label>
    <type>Email</type>
</CustomField>