care/force-app/main/default/objects/Default_Email_Publisher_Setting__mdt/fields/Default_From__c.field-meta.xml
<CustomField>
    <fullName>Default_From__c</fullName>
    <label>Default From</label>
    <type>Email</type>
</CustomField>