care/force-app/main/default/objects/Default_Email_Publisher_Setting__mdt/fields/Default_Subject__c.field-meta.xml
<CustomField>
    <fullName>Default_Subject__c</fullName>
    <inlineHelpText>This will replace the default subject (which is usually the Case Subject).</inlineHelpText>
    <label>Default Subject</label>
    <length>100</length>
    <type>Text</type>
</CustomField>