care/force-app/main/default/objects/Default_Email_Publisher_Setting__mdt/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>