care/force-app/main/default/objects/Default_Email_Publisher_Setting__mdt/fields/Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Record_Types__c</fullName>
    <inlineHelpText>Enter a comma delimited list of Case Record Types here.  

The Record Types can&apos;t be validated during editing, so edit this field carefully.  The code will gracefully ignore invalid Record Types at runtime.</inlineHelpText>
    <label>Record Types</label>
    <length>100</length>
    <type>Text</type>
</CustomField>