care/force-app/main/default/objects/Default_Email_Publisher_Setting__mdt/listViews/All_Default_Email_Publisher_Settings.listView-meta.xml
<ListView>
    <fullName>All_Default_Email_Publisher_Settings</fullName>
    <columns>MasterLabel</columns>
    <columns>Record_Types__c</columns>
    <columns>Countries__c</columns>
    <columns>Case_Origins__c</columns>
    <columns>Default_From__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Default Email Publisher Settings</label>
    <language>en_US</language>
</ListView>