care/force-app/main/default/objects/Default_Email_Publisher_Setting__mdt/listViews/All_International_Settings.listView-meta.xml
<ListView>
    <fullName>All_International_Settings</fullName>
    <columns>MasterLabel</columns>
    <columns>Countries__c</columns>
    <columns>Case_Origins__c</columns>
    <columns>Default_From__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MasterLabel</field>
        <operation>contains</operation>
        <value>International</value>
    </filters>
    <label>All International Settings</label>
    <language>en_US</language>
</ListView>