care/force-app/main/default/objects/Default_Email_Publisher_Setting__mdt/listViews/All_National_Settings.listView-meta.xml
<ListView>
    <fullName>All_National_Settings</fullName>
    <columns>MasterLabel</columns>
    <columns>Record_Types__c</columns>
    <columns>Countries__c</columns>
    <columns>Case_Origins__c</columns>
    <columns>Default_From__c</columns>
    <columns>Default_CC__c</columns>
    <columns>Default_BCC__c</columns>
    <columns>Default_Subject__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MasterLabel</field>
        <operation>notContain</operation>
        <value>International</value>
    </filters>
    <label>All National Settings</label>
    <language>en_US</language>
</ListView>